used cards to display images

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,4 @@
   <mat-grid-tile> <app-text></app-text></mat-grid-tile>
   <mat-grid-tile><app-images></app-images></mat-grid-tile>
 </mat-grid-list>
-
+<app-para></app-para>
